# streetwear-market

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_REPORT.md  README.md  alembic.ini  context1_1.md  context1_2.md  docker-compose.yml  main.py  plan1_1.md  plan1_2.md  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_add_customer_order_schema.py  003_add_loyalty_tier.py  004_add_stock_quantity.py  005_add_promotions_and_reservations.py
app/api/: __init__.py  brand_router.py  catalog_router.py  customer_router.py  inventory_router.py  order_router.py  product_router.py  promotion_router.py
app/core/: config.py  database.py
app/domain/: __init__.py  base.py  enums.py  events.py  exceptions.py  ordering.py  policies.py  pricing_rules.py  validators.py  value_objects.py  workflow.py
app/models/: __init__.py  brand.py  catalog.py  customer.py  inventory_reservation.py  order.py  product.py  promotion.py
app/repositories/: __init__.py  base.py  brand.py  catalog.py  customer.py  inventory.py  order.py  product.py  promotion.py
app/schemas/: __init__.py  brand.py  catalog.py  customer.py  inventory.py  order.py  product.py  promotion.py
app/services/: __init__.py  brand.py  catalog.py  customer.py  inventory.py  order.py  pricing.py  product.py  promotion.py
docs/: pain_points.md
tests/: conftest.py
tests/integration/: test_catalog_crud.py  test_customer_crud.py  test_inventory_hold_release.py  test_inventory_reservation_isolation.py  test_order_crud.py  test_order_product_contract.py  test_product_crud.py  (+2 more)
(+7 files in other folders)
